
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int u32; int u64; } ;
struct epoll_event {int events; TYPE_1__ data; } ;


 int EPOLLERR ;
 int EPOLLET ;
 int EPOLLHUP ;
 int EPOLLIN ;
 int EPOLLOUT ;
 int EPOLLPRI ;
 int EPOLL_CTL_ADD ;
 scalar_t__ epoll_ctl (int,int ,int,struct epoll_event*) ;
 int errno ;
 int printf (char*,int,...) ;

void add_fd(int fde, int fd) {
 printf("[*] Adding fd %d to eventpoll %d\n", fd, fde);
 static struct epoll_event ev;
 ev.events = EPOLLIN|EPOLLOUT|EPOLLPRI|EPOLLERR|EPOLLHUP|EPOLLET;
 errno =0;

 ev.data.u32 = 6;
 ev.data.u64 = 6;

 if (epoll_ctl(fde, EPOLL_CTL_ADD, fd, &ev) == 0) {
  printf(" => Fd %d added!\n", fd);
 } else {
  printf(" => Error (%d) adding fd %d\n", errno, fd);
 }
}
