; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_6472.c_add_fd.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_6472.c_add_fd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.epoll_event = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@.str = private unnamed_addr constant [34 x i8] c"[*] Adding fd %d to eventpoll %d\0A\00", align 1
@add_fd.ev = internal global %struct.epoll_event zeroinitializer, align 4
@EPOLLIN = common dso_local global i32 0, align 4
@EPOLLOUT = common dso_local global i32 0, align 4
@EPOLLPRI = common dso_local global i32 0, align 4
@EPOLLERR = common dso_local global i32 0, align 4
@EPOLLHUP = common dso_local global i32 0, align 4
@EPOLLET = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@EPOLL_CTL_ADD = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [18 x i8] c" => Fd %d added!\0A\00", align 1
@.str.2 = private unnamed_addr constant [29 x i8] c" => Error (%d) adding fd %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @add_fd(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i32 (i8*, i32, ...) @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %5, i32 %6)
  %8 = load i32, i32* @EPOLLIN, align 4
  %9 = load i32, i32* @EPOLLOUT, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @EPOLLPRI, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* @EPOLLERR, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* @EPOLLHUP, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* @EPOLLET, align 4
  %18 = or i32 %16, %17
  store i32 %18, i32* getelementptr inbounds (%struct.epoll_event, %struct.epoll_event* @add_fd.ev, i32 0, i32 0), align 4
  store i32 0, i32* @errno, align 4
  store i32 6, i32* getelementptr inbounds (%struct.epoll_event, %struct.epoll_event* @add_fd.ev, i32 0, i32 1, i32 0), align 4
  store i32 6, i32* getelementptr inbounds (%struct.epoll_event, %struct.epoll_event* @add_fd.ev, i32 0, i32 1, i32 1), align 4
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* @EPOLL_CTL_ADD, align 4
  %21 = load i32, i32* %4, align 4
  %22 = call i64 @epoll_ctl(i32 %19, i32 %20, i32 %21, %struct.epoll_event* @add_fd.ev)
  %23 = icmp eq i64 %22, 0
  br i1 %23, label %24, label %27

24:                                               ; preds = %2
  %25 = load i32, i32* %4, align 4
  %26 = call i32 (i8*, i32, ...) @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i32 %25)
  br label %31

27:                                               ; preds = %2
  %28 = load i32, i32* @errno, align 4
  %29 = load i32, i32* %4, align 4
  %30 = call i32 (i8*, i32, ...) @printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.2, i64 0, i64 0), i32 %28, i32 %29)
  br label %31

31:                                               ; preds = %27, %24
  ret void
}

declare dso_local i32 @printf(i8*, i32, ...) #1

declare dso_local i64 @epoll_ctl(i32, i32, i32, %struct.epoll_event*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
